# plasma-login-manager

./: CMakeLists.txt  CONTRIBUTORS  ChangeLog  INSTALL.md  README.md
.github/workflows/: build.yml
components/: CMakeLists.txt
components/common/: qmldir
data/: CMakeLists.txt
data/man/: CMakeLists.txt  sddm-greeter.rst.in  sddm-state.conf.rst.in  sddm.conf.rst.in  sddm.rst.in
data/scripts/: wayland-session
data/themes/elarun/: Main.qml  README  metadata.desktop.in
data/themes/maldives/: Main.qml  metadata.desktop.in
data/themes/maya/: LICENSE  Main.qml  README  metadata.desktop.in
data/translations/: ka.ts
docs/: ARCHITECTURE.md  THEMING.md
releng/: prepare-relnotes  template.txt
services/: CMakeLists.txt  plasmalogin-sysuser.conf.in  plasmalogin-tmpfiles.conf.in  plasmalogin.service.in
src/: CMakeLists.txt
src/auth/: Auth.cpp  Auth.h  AuthMessages.h  AuthPrompt.cpp  AuthPrompt.h  AuthRequest.cpp  AuthRequest.h
src/common/: ConfigReader.cpp  ConfigReader.h  Configuration.cpp  Configuration.h  Constants.h.in  MessageHandler.h  Messages.h  SafeDataStream.cpp  SafeDataStream.h  Session.cpp  Session.h  SignalHandler.cpp  SignalHandler.h  SocketWriter.cpp  SocketWriter.h  ThemeConfig.cpp  ThemeConfig.h  ThemeMetadata.cpp  ThemeMetadata.h  VirtualTerminal.cpp  VirtualTerminal.h  XAuth.cpp  XAuth.h
src/daemon/: CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  DisplayServer.cpp  DisplayServer.h  Greeter.cpp  Greeter.h  PowerManager.cpp  PowerManager.h  Seat.cpp  Seat.h  SeatManager.cpp  SeatManager.h  SocketServer.cpp  SocketServer.h  Utils.h  WaylandDisplayServer.cpp  WaylandDisplayServer.h  XorgDisplayServer.cpp  XorgDisplayServer.h  XorgUserDisplayServer.cpp  XorgUserDisplayServer.h  config.h.in
src/greeter/: CMakeLists.txt  GreeterApp.cpp  GreeterApp.h  GreeterProxy.cpp  GreeterProxy.h  KeyboardBackend.h  KeyboardLayout.cpp  KeyboardLayout.h  KeyboardModel.cpp  KeyboardModel.h  KeyboardModel_p.h  ScreenModel.cpp  ScreenModel.h  SessionModel.cpp  SessionModel.h  UserModel.cpp  UserModel.h  XcbKeyboardBackend.cpp  XcbKeyboardBackend.h  waylandkeyboardbackend.cpp  waylandkeyboardbackend.h
src/greeter/theme/: Main.qml  metadata.desktop.in
src/helper/: Backend.cpp  Backend.h  CMakeLists.txt  HelperApp.cpp  HelperApp.h  HelperStartWayland.cpp  HelperStartX11User.cpp  UserSession.cpp  UserSession.h  waylandhelper.cpp  waylandhelper.h  waylandsocketwatcher.cpp  waylandsocketwatcher.h  xorguserhelper.cpp  xorguserhelper.h
src/helper/backend/: PamBackend.cpp  PamBackend.h  PamHandle.cpp  PamHandle.h
test/: CMakeLists.txt  QMLThemeConfigTest.cpp  SessionTest.cpp
